--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,28 @@
-pandas
-sqlalchemy
-pyarrow
-dask[dataframe]
-pyspark
-matplotlib
-seaborn
-requests
-flask
-plotly
-plotly>=5.0.0
+# requirements_compatible.txt
+# VERSIÓN PARA PYTHON 3.12+ SIN COMPILACIÓN
+
+# Numpy con wheel para Python 3.12
+numpy==1.24.3  # ¡OJO! Esta versión SÍ tiene wheels para 3.12
+
+# Pandas compatible
+pandas==2.1.4
+
+# Plotly y Dash (sin compilación)
+plotly==5.17.0
+dash==2.14.0
+dash-bootstrap-components==1.5.0
+
+# Visualización básica
+matplotlib==3.7.1
+seaborn==0.12.2
+
+# Scipy con wheel para 3.12
+scipy==1.10.1  # Esta versión SÍ tiene wheels
+
+# Scikit-learn compatible
+scikit-learn==1.3.0
+
+# Utilidades
+python-dotenv==1.0.0
+jupyter==1.0.0
+notebook==7.0.4
