GITIGNORE: Protección entregas de alumnos
Agregar reglas para ignorar archivos no deseados en entregas/**:

BLOQUEAR:
- Datos: *.csv, *.xlsx, *.parquet, *.json, *.xml, data/
- Bases de datos: *.db, *.sqlite
- Logs: logs/, *.log
- Credenciales: .env (pero permitir .env.example)
- Virtual environments: venv/, env/
- Python cache: __pycache__/, *.pyc
- Temporales: tmp/, *.tmp
- Imágenes: *.png, *.jpg (excepto docs/capturas/)

PERMITIR:
- Código fuente (.py, .sql)
- Documentación (.md)
- requirements.txt
- .env.example
- Capturas en docs/capturas/

Protección contra que alumnos suban accidentalmente datos o credenciales.

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,56 @@ datos/*.gif
 !datos/README.md
 !datos/*.py
 
+# =============================================================================
+# ENTREGAS DE ALUMNOS - Protección contra subir archivos no deseados
+# =============================================================================
+# Los alumnos NO deben subir datos, logs, venv, ni credenciales
+# Solo código fuente, SQL, documentación, requirements.txt
+
+# Datos generados por alumnos
+entregas/**/data/
+entregas/**/*.csv
+entregas/**/*.xlsx
+entregas/**/*.parquet
+entregas/**/*.json
+entregas/**/*.xml
+
+# Bases de datos de alumnos
+entregas/**/*.db
+entregas/**/*.sqlite
+entregas/**/*.sqlite3
+
+# Logs de alumnos
+entregas/**/logs/
+entregas/**/*.log
+
+# Credenciales (permitir .env.example, bloquear .env)
+entregas/**/.env
+!entregas/**/.env.example
+
+# Virtual environments de alumnos
+entregas/**/venv/
+entregas/**/env/
+entregas/**/.venv/
+
+# Python cache de alumnos
+entregas/**/__pycache__/
+entregas/**/*.pyc
+entregas/**/*.pyo
+
+# Archivos temporales de alumnos
+entregas/**/tmp/
+entregas/**/*.tmp
+entregas/**/temp/
+
+# Capturas grandes (permitir solo en docs/capturas/)
+entregas/**/*.png
+entregas/**/*.jpg
+entregas/**/*.jpeg
+!entregas/**/docs/capturas/*.png
+!entregas/**/docs/capturas/*.jpg
+!entregas/**/docs/capturas/*.jpeg
+
 # OS
 .DS_Store
 Thumbs.db
